TrainingManager/Content/Site.css
body {
    font-size: 17px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

span.field-validation-error {
    color: red;
}

/* Bootstrap Overrides */

body,
h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.form-group {
    margin-bottom: 20px;
}

.form-control:focus {
    font-size: 17px;
    height: 44px;
    -ms-border-radius: 9px;
    border-radius: 9px;
}

h2 {
    margin-top: 15px;
}

h3 {
    margin-top: 10px;
}

/* Page-level styles */

.doubleBtn {
    margin: 0px;
    padding: 0px;
    border-radius: 0px;
    width: 100%;
    height: 50px;
}
   
.tripleBtn{
    padding: 0px;
    margin: 0px;
    width: 100%;
    border-radius: 0px;
    height: 33px;
}
    
#searchPlans {
    margin-top: 20px;
}

#searchPlans > .input-group {
  margin: auto;
  max-width: 400px;
}

#searchPlans div input { 
  max-width: none;
}

/* 
  Allow angular.js to be loaded in body, hiding cloaked elements until 
  templates compile.  The !important is important given that there may be 
  other selectors that are more specific or come later and might alter display.  
 */
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak,
.ng-hide {
    display: none !important;
}

.summary-shift-arrow {
    font-size: 2em;
    padding-top: 92px;
    padding-bottom: 92px;
    width: 100%;
}

.summary-shift-arrow:active {
    background-color: #dddddd;
}

#homeImage {
   max-width: 30vh;
   margin-top: 18vh;
}

.parent {
    display: table;
    height: 300px;
}

.child {
    display: table-cell;
    vertical-align: middle;
    padding-left: 10px;
}

.tile-img {
    max-width: 90%;
    max-height: 300px;
    border-radius: 10px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.fit-screen {
    height: 100vh;
}

.field-validation-error span {
    font-size: medium;
}

.actions {
    margin: 0 auto;
    padding: 0px;
    text-align: center;
}

.actions #viewBtn {
    margin: 0px;
    padding: 0px;
    border-radius: 0px;
    width: 100%;
    height: 100px;
}

.plan-rating {
    background: #aaaaaa;
    border-color: #aaaaaa;
    color: #fff;
    height: 100px;
    padding: 0;
}

    .plan-rating .rating-value {
        text-align: center;
        font-size: 20px;
    }

    .plan-rating .plan-rating-label {
        font-size: 50%;
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 28px;
    }

.plan-block {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;
}

    .plan-block .middle-content {
        height: 100px;
        background-color: #f4f8ff;
        padding-top: 5px;
    }

    .plan-block .middle-content .plan-name {
        margin: 7px 0;
    }

.user-block {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
}

.user-card {
    width: 100%;
}

    .user-card > hr {
        margin: 0;
    }

#user-table .left-col {
    padding-left: 40px;
}

#user-image {
    max-height: 200px;
}

#myBarChart {
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
}

#myPieChart {
    margin-bottom: 30px;
}

.plan-table-col {
    border: solid 1px #dddddd;
}

.plan-table-row {
    color: white;
    background-color: black;
}

#plan-summary-button-actions {
    border-radius: 0px;
    font-size: 12px;
    width: 100%;
    background-color: #f2f2f2;
    color: black;
    padding-top: 50px;
    padding-bottom: 50px;
}

#plan-summary-button-no-actions {
    border-radius: 0px;
    font-size: 12px;
    width: 100%;
    background-color: #f2f2f2;
    color: black;
    padding-top: 76px;
    padding-bottom: 76px;
}

.plan-summary-arrow-block {
    background-color: white;
    margin: 0;
    border: solid 1px #dddddd;
    height: 220px;
}

#plan-summary-workouts-display > td {
    padding: 0px;
    border: solid 1px #dddddd;
}

#plan-summary-workouts-display #createBtn {
    margin-top: 60px;
    margin-bottom: 60px;
    font-size: 26px;
    color: #5cb85c;
    border-radius: 0px;
    width: 100%;
}

#plan-summary-workouts-display #removeBtn {
    width: 100%;
    float: left;
    height: 26px;
    border-radius: 0px;
    font-size: 10px;
}

#plan-summary-workouts-display #editBtn {
    width: 100%;
    float: left;
    height: 26px;
    border-radius: 0px;
    font-size: 10px;
}

#training-types-container {
    text-align: center;
}

.training-type-card {
    width: 22rem;
    margin: 20px;
    border: solid 1px #cccccc;
    border-radius: 10px;
    display: inline-block;
}

    .training-type-card > .card-img-top {
        width: 100%;
        margin-top: 20px
    }

#workout-display-table {
    margin-top: 20px;
}

#register-input-row {
    max-width: 500px;
    margin-right: auto;
    margin-left: auto;
}

    #register-input-row input,
    #register-input-row select {
        max-width: 100%;
    }

#training-type-validation {
    margin-top: 20px;
    clear: both
}

.no-metrics {
    margin-top: 100px;
    margin-bottom: 100px;
}

.mobile {
    display: none;
}

.not-mobile {
    display: unset;
}

input,
select {
    max-width: 350px;
}

#user-plans-link {
    font-size: 12px;
}

#non-mobile-headers {
    display: table-row;
}

#mobile-headers {
    display: none;
}


#line-chart-container {
    padding: 30px;
    margin-bottom: 20px;
}

.navbar-brand {
    padding-left: 5rem;
    margin-right: 3rem;
}

.card-deck label{
    margin: 0;
}   

#home-title {
    margin-bottom: 35px;
}

.card-header {
    background-color: white;
    margin: 2px;
}

/*Clip text element */
.clip-text {
    font-size: 6em;
    font-weight: bold;
    line-height: 1;
    position: relative;
    display: inline-block;
    display: inline-block;
    margin: .25em;
    padding: .5em .75em;
    text-align: center;
    /* Color fallback*/
    color: #fff;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.clip-text:before,
.clip-text:after {
    position: absolute;
    content: '';
}

/* Background  */
.clip-text:before {
    z-index: -2;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-image: inherit;
}

/* Text Background (black zone)  */
.clip-text:after {
    position: absolute;
    z-index: -1;
    top: .125em;
    right: .125em;
    bottom: .125em;
    left: .125em;
    background-color: #000;
}

.clip-text--cover,
.clip-text--cover:before {
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    background-size: cover;
    background-position: 50% 50%;
}

.clip-text_fourteen {
    background-image: url(../img/home-colors.png);
}

/* Mobile */
@media only screen and (max-device-width: 600px) {
    #searchPlans div {
        width: 300px;
    }

    .user-block {
        width: 100%;
    }

    #user-image {
        max-height: 170px;
    }

    #user-table {
        font-size: 12px;
    }

        #user-table .left-col {
            padding-left: 40px;
        }

    #myBarChart {
        max-width: 350px;
    }

    #plan-summary-workouts-display > td {
        text-align: left;
    }

        #plan-summary-workouts-display > td > div > a {
            font-size: 8px;
            padding-left: 5px;
        }

    #plan-summary-workouts-display .btn-danger {
        padding-left: 3px;
    }

    .summary-shift-arrow {
        font-size: 1em;
        padding-top: 101px;
        padding-bottom: 101px;
    }

    #plan-summary-button-actions {
        padding-top: 52.5px;
        padding-bottom: 52.5px;
    }

    #plan-summary-button-no-actions {
        padding-top: 78.5px;
        padding-bottom: 78.5px;
    }

    #rating-display-table {
        font-size: 12px;
    }

        #rating-display-table button {
            font-size: 10px;
        }

    #workout-display-table {
        font-size: 12px;
    }

        #workout-display-table button {
            font-size: 8px;
        }

    #line-chart-container {
        display: none;
    }

    .training-type-card {
        padding: 0;
        margin: auto;
        margin-top: 15px;
        max-width: 95%;
    }

    #plan-summary-link {
        font-size: 12px;
    }

    #homeImage {
        margin-top: 17vh;
    }

    .form-horizontal .control-label {
        padding-top: 0;
    }

    .plan-block .middle-content .plan-name {
        font-size: 12px;
        margin: 12px 0;
    }

    .actions > button {
        font-size: 10px;
    }

    #plan-created-date {
        font-size: 12px;
        margin-top: 33px;
    }

    .mobile {
        display: unset;
    }

    .not-mobile {
        display: none;
    }

    .tile-img {
        max-height: 100%;
    }

    #all-users-table {
        font-size: 12px;
    }

    #register-input-row .form-group  {
        margin-left: 5px;
        margin-right: 5px;
    }

    #non-mobile-headers {
        display: none;
    }

    #mobile-headers {
        display: table-row;
    }

    .navbar-brand {
        padding-left: 0;
    }

    .clip-text {
        font-size: 1.8em;
    }

    #home-title {
        height: 100vh;
        padding-top: 30vh;
    }
}

